25.8
-----
* [*] Enable dismissing the virtual keyboard in the experimental editor [#23988]
* [*] Remove Submit Feedback form from the Me menu [#24020]
* [*] Fix unselectable group blocks in the experimental editor [https://github.com/wordpress-mobile/GutenbergKit/pull/68]
* [*] Prevent a intermittent crash when opening the experimental editor's "more" menu [#24065]

25.7
-----
* [**] Add Image Playground support (part of Apple Intelligence suite) for adding images to your posts, generated featured image, site icons, and more [#23688]
* [**] Enable history navigation (undo and redo) for the experimental editor. [#23961]
* [**] Various bug fixes and improvements in the new experimental editor [#23919]
* [**] Enhance the Gravatar Quick Editor by adding features that allow users to delete and share their avatars. [#23868]
* [**] Add new lightbox screen for images with modern transitions and enhanced performance [#23922]
* [**] Add the capability to create an avatar using Apple Image Playground through the Gravatar Quick Editor. [#23868]
* [*] Fix sorting in Stats Subscriber Emails (latest first) [#23913]
* [*] Reader: Fix a couple of rare crashes in Reader [#23907]
* [*] Add prefetching to Reader streams [#23928]
* [*] Reader: The post cover now uses the standard aspect ratio for covers, so there is no jumping. There are also a few minor improvements to the layout and animations of the cover and the header [#23897, #23909]
* [*] Reader: Move the "Reading Preferences" button to the "More" menu [#23897]
* [*] Reader: Fix an issue with empty state views being non-scrollable in streams [#23908]
* [*] Reader: Hide post toolbar when reading an article and fix like button animations [#23909]
* [*] Reader: Fix off-by-one error in post details like counter when post is liked by you [#23912]
* [*] Fix an issue with blogging reminders prompt not being shown after publishing a new post [#23930]