@@ -4,6 +4,7 @@
 * [*] Remove Submit Feedback form from the Me menu [#24020]
 * [*] Fix unselectable group blocks in the experimental editor [https://github.com/wordpress-mobile/GutenbergKit/pull/68]
 * [*] Prevent a intermittent crash when opening the experimental editor's "more" menu [#24065]
+* [*] Fix incorrect background color for draft post cells on dashboard [#24080]
 
 25.7
 -----
